data/ routes, drop the parrots and dogs for now

--- a/example/render/cat.html
+++ b/example/render/cat.html
@@ -1,4 +1,9 @@
 <div class="cat">
-  <h1>cats:</h1>
-  <div class="list"></div>
+  <h2 class="name"></h2>
+  <div>
+    owner: <span class="owner"></span>
+  </div>
+  <div>
+    location: <span class="location"></span>
+  </div>
 </div>
