--- a/example/static/index.html
+++ b/example/static/index.html
@@ -3,10 +3,10 @@
     <link rel="stylesheet" href="/style.css">
   </head>
   <body>
+    <div id="section"></div>
     <ul id="tabs">
-      <li>cats</li>
-      <li>dogs</li>
-      <li>parrots</li>
+      <li><a href="/cats">cats</a></li>
+      <li><a href="/owners">owners</a></li>
     </ul>
     <div id="content"></div>
     <script src="/bundle.js"></script>
