--- a/example/render/cat_full.html
+++ b/example/render/cat_full.html
@@ -1,4 +1,6 @@
 <div class="cat">
-  <h1>cats:</h1>
-  <div class="list"></div>
+  <h1 class="name"></h1>
+  <div>
+    owner: <span class="owner"></span>
+  </div>
 </div>
