--- a/example/render/cat.html
+++ b/example/render/cat.html
@@ -1,5 +1,5 @@
 <div class="cat">
-  <h2 class="name"></h2>
+  <h2><a class="name"></a></h2>
   <div>
     owner: <span class="owner"></span>
   </div>
