prettier header bar

--- a/example/static/index.html
+++ b/example/static/index.html
@@ -3,11 +3,13 @@
     <link rel="stylesheet" href="/style.css">
   </head>
   <body>
-    <div id="section"></div>
-    <ul id="tabs">
-      <li><a href="/cats">cats</a></li>
-      <li><a href="/owners">owners</a></li>
-    </ul>
+    <div id="header">
+      <div id="section"></div>
+      <ul id="tabs">
+        <li><a href="/cats">cats</a></li>
+        <li><a href="/owners">owners</a></li>
+      </ul>
+    </div>
     <div id="content"></div>
     <script src="/bundle.js"></script>
   </body>
