links to everything

--- a/example/render/cat_full.html
+++ b/example/render/cat_full.html
@@ -1,6 +1,6 @@
 <div class="cat">
   <h1 class="name"></h1>
   <div>
-    owner: <span class="owner"></span>
+    owner: <a class="owner"></a>
   </div>
 </div>
