--- a/example/render/owner.html
+++ b/example/render/owner.html
@@ -1,8 +1,5 @@
-<div class="cat">
+<div class="owner">
   <h2><a class="name"></a></h2>
-  <div>
-    owner: <a class="owner"></a>
-  </div>
   <div>
     location: <span class="location"></span>
   </div>
