--- a/example/render/owner.html
+++ b/example/render/owner.html
@@ -1,4 +1,4 @@
-<div class="owner">
+<div class="owner summary">
   <h2><a class="name"></a></h2>
   <div>
     location: <span class="location"></span>
