--- a/example/static/index.html
+++ b/example/static/index.html
@@ -6,6 +6,7 @@
     <div id="header">
       <div id="section"></div>
       <ul id="tabs">
+        <li><a href="/">home</a></li>
         <li><a href="/cats">cats</a></li>
         <li><a href="/owners">owners</a></li>
       </ul>
