check for .data

--- a/example/static/home.html
+++ b/example/static/home.html
@@ -1,4 +1,4 @@
-</div>
+<div>
   This is an example app for <a href="https://npmjs.org/package/tabby">tabby</a>,
   a tiny library for building tabbed realtime web apps with progressive
   enhancement.
