mews example route

--- a/example/static/index.html
+++ b/example/static/index.html
@@ -4,11 +4,12 @@
   </head>
   <body>
     <div id="header">
-      <div id="section"></div>
+      <div id="section">tabby</div>
       <ul id="tabs">
         <li><a href="/">home</a></li>
         <li><a href="/cats">cats</a></li>
         <li><a href="/owners">owners</a></li>
+        <li><a href="/mews">mews</a></li>
       </ul>
     </div>
     <div id="content"></div>
