permalinks work for mews

--- a/example/tabs/mews/render.html
+++ b/example/tabs/mews/render.html
@@ -1,7 +1,7 @@
 <div class="mews">
   <div>
     <a class="cat"></a>
-    [<a class="link">link</a>]
+    [<a class="link">permalink</a>]
   </div>
   <div class="message"></div>
 </div>
